--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,13 @@
         "php": "^7.1.3",
         "symfony/phpunit-bridge": "4.2.*",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "jms/serializer-bundle": "^1.0|^2.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "symfony/browser-kit": "4.2.*",
+        "symfony/web-server-bundle": "4.2.*"
     },
     "require-dev": {
-        "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
-        "symfony/flex": "^1.1",
-        "symfony/form": "4.2.*",
-        "symfony/framework-bundle": "4.2.*",
         "symfony/orm-pack": "^1.0",
-        "symfony/property-access": "4.2.*",
-        "symfony/serializer": "4.2.*",
-        "symfony/web-server-bundle": "4.2.*",
-        "symfony/browser-kit": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/property-access": "4.2.*"
     },
     "autoload": {
         "psr-4": {
