--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "symfony/phpunit-bridge": "4.2.*",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/browser-kit": "4.2.*",
-        "symfony/web-server-bundle": "4.2.*"
+        "symfony/web-server-bundle": "4.2.*",
+        "symfony/serializer": "4.2.*"
     },
     "require-dev": {
         "symfony/dotenv": "4.2.*",
