--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/browser-kit": "4.2.*",
         "symfony/web-server-bundle": "4.2.*",
-        "symfony/serializer": "4.2.*"
+        "symfony/serializer": "4.2.*",
+        "lukascivil/treewalker": "dev-master"
     },
     "require-dev": {
         "symfony/dotenv": "4.2.*",
