--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,19 @@
     "name": "deozza/api-tester-bundle",
     "type": "symfony-bundle",
     "license": "MIT",
+    "version": "1.0.3",
     "require": {
         "php": "^7.0",
-        "symfony/phpunit-bridge": "4.2.*",
+        "symfony/phpunit-bridge": "^4.0",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "symfony/browser-kit": "4.2.*",
-        "symfony/web-server-bundle": "4.2.*",
-        "symfony/serializer": "4.2.*"
+        "symfony/browser-kit": "^4.0",
+        "symfony/web-server-bundle": "^4.0",
+        "symfony/serializer": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "4.2.*",
+        "symfony/dotenv": "^4.0",
         "symfony/orm-pack": "^1.0",
-        "symfony/property-access": "4.2.*"
+        "symfony/property-access": "^4.0"
     },
     "autoload": {
         "psr-4": {
