--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,16 @@
     "version": "1.0.3",
     "require": {
         "php": "^7.0",
-        "symfony/phpunit-bridge": "^4.0",
+        "symfony/phpunit-bridge": "4.2.*",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "symfony/browser-kit": "^4.3",
-        "symfony/web-server-bundle": "^4.0",
-        "symfony/serializer": "^4.0"
+        "symfony/browser-kit": "4.2.*",
+        "symfony/web-server-bundle": "4.2.*",
+        "symfony/serializer": "4.2.*"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0",
+        "symfony/dotenv": "4.2.*",
         "symfony/orm-pack": "^1.0",
-        "symfony/property-access": "^4.0"
+        "symfony/property-access": "4.2.*"
     },
     "autoload": {
         "psr-4": {
