--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,7 @@
         "symfony/phpunit-bridge": "4.2.*",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/browser-kit": "4.2.*",
-        "symfony/web-server-bundle": "4.2.*",
-        "symfony/serializer": "4.2.*"
-    },
-    "require-dev": {
-        "symfony/dotenv": "4.2.*",
-        "symfony/orm-pack": "^1.0",
-        "symfony/property-access": "4.2.*"
+        "symfony/dotenv": "4.2.*"
     },
     "autoload": {
         "psr-4": {
