--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "require": {
         "php": "^7.0",
         "symfony/phpunit-bridge": "4.2.*",
-        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/browser-kit": "4.2.*",
-        "symfony/dotenv": "4.2.*"
+        "symfony/dotenv": "4.2.*",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
